# hmsm

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.cfg
docs/: CONFIG.md  FORMATS.md  INSTALL.md
src/hmsm/: __init__.py  cardboard_discs.py  cli.py  config.py  debug_entry.py  midi.py  rolls.py  utils.py
src/hmsm/data/: config.json  lut.npy
src/hmsm/discs/: __init__.py  cluster.py  generator.py  utils.py
src/hmsm/midi/: __init__.py
src/hmsm/rolls/: __init__.py  analysis.py  masking.py  utils.py
src/hmsm/rolls/masking/: __init__.py  methods.py
